# purple

./: .gitignore  Cargo.toml  README.md  llms.txt
.github/workflows/: release.yml
site/: page.html  worker.ts
src/: app.rs  clipboard.rs  connection.rs  event.rs  handler.rs  history.rs  import.rs  lib.rs  main.rs  ping.rs  preferences.rs  quick_add.rs  ssh_keys.rs  tui.rs
src/providers/: config.rs  digitalocean.rs  hetzner.rs  linode.rs  mod.rs  proxmox.rs  sync.rs  upcloud.rs  vultr.rs
src/ssh_config/: model.rs  parser.rs  writer.rs
src/ui/: confirm_dialog.rs  detail_panel.rs  help.rs  host_detail.rs  host_form.rs  host_list.rs  key_detail.rs  key_list.rs  mod.rs  provider_list.rs  tag_picker.rs  theme.rs  tunnel_form.rs
tests/: roundtrip_fidelity.rs
