[package]
name = "purple-ssh"
version = "0.3.1"
edition = "2024"
description = "A fast, interactive TUI (terminal UI) for managing your ~/.ssh/config. Add, edit, delete and connect to SSH hosts from the terminal"
license = "MIT"
repository = "https://github.com/erickochen/purple"
homepage = "https://github.com/erickochen/purple"
readme = "README.md"
keywords = ["ssh", "ssh-config", "tui", "terminal", "config-manager"]
categories = ["command-line-utilities", "network-programming"]
rust-version = "1.85"
exclude = [".github/", ".gitignore"]

[[bin]]
name = "purple"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "6"
glob = "0.3"
anyhow = "1"
thiserror = "2"

[profile.release]
strip = true
lto = true
opt-level = "z"
