[package]
name = "purple-ssh"
version = "0.9.0"
edition = "2024"
description = "A smart, fast SSH launcher for your terminal. Search, tag and connect to hosts from a TUI. Manages ~/.ssh/config with round-trip fidelity"
license = "MIT"
repository = "https://github.com/erickochen/purple"
homepage = "https://github.com/erickochen/purple"
readme = "README.md"
keywords = ["ssh", "ssh-config", "tui", "terminal", "ssh-manager"]
categories = ["command-line-utilities", "network-programming"]
rust-version = "1.85"
exclude = [".github/", ".gitignore"]

[lib]
name = "purple_ssh"
path = "src/lib.rs"

[[bin]]
name = "purple"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "6"
glob = "0.3"
anyhow = "1"
thiserror = "2"
unicode-width = "0.2.2"

[profile.release]
strip = true
lto = true
opt-level = "z"
