[package]
name = "purple-ssh"
version = "1.8.1"
edition = "2024"
description = "Manage SSH configs and launch connections from the terminal. TUI host manager with search, tags, tunnels, cloud sync (DigitalOcean, Vultr, Linode, Hetzner, UpCloud), self-update and round-trip fidelity for ~/.ssh/config."
license = "MIT"
repository = "https://github.com/erickochen/purple"
homepage = "https://github.com/erickochen/purple"
readme = "README.md"
keywords = ["ssh", "ssh-config", "tui", "terminal", "ssh-manager"]
categories = ["command-line-utilities", "network-programming"]
rust-version = "1.85"
exclude = [".github/", ".gitignore"]

[lib]
name = "purple_ssh"
path = "src/lib.rs"

[[bin]]
name = "purple"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "6"
glob = "0.3"
anyhow = "1"
thiserror = "2"
unicode-width = "0.2.2"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
opt-level = "z"
